# VulkanPlayground

./: CMakeLists.txt  Camera.hpp  Components.hpp  Entity.cpp  Entity.hpp  Mesh.cpp  Mesh.hpp  Scene.cpp  Texture.cpp  Texture.hpp  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanContext.cpp  VulkanDescriptorAllocator.cpp  VulkanDescriptorAllocator.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanFrame.hpp  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.hpp  VulkanImage.cpp  VulkanImage.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanSwapChain.cpp  VulkanSwapChain.hpp  VulkanVertex.hpp  VulkanWindow.cpp  VulkanWindow.hpp  generate_vs.bat  main.cpp  pch.hpp  vcpkg.json
shaders/: compile.bat  shader.slang  shader.spv  skybox.slang  skybox.spv
src/: main.cpp  pch.hpp
src/core/: Application.cpp  Application.hpp  Input.cpp  Input.hpp  KeyCodes.cpp  KeyCodes.def  KeyCodes.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  MouseCodes.cpp  MouseCodes.def  MouseCodes.hpp  Timestep.hpp  UUID.cpp  UUID.hpp
src/editor/: ContentBrowserPanel.cpp  ContentBrowserPanel.hpp  EditorCamera.cpp  EditorCamera.hpp  EditorLayer.cpp  EditorLayer.hpp  EditorUI.cpp  EditorUI.hpp  FileDialogs.cpp  FileDialogs.hpp  SceneHierarchyPanel.cpp  SceneHierarchyPanel.hpp
src/events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
src/renderer/: ImGuiLayer.cpp  ImGuiLayer.hpp  RGCommandList.cpp  RGCommandList.hpp  RenderGraph.cpp  RenderGraph.hpp  SceneRenderer.cpp  SceneRenderer.hpp  VulkanBuffer.cpp  VulkanContext.hpp  VulkanDescriptorAllocator.cpp  VulkanDescriptorAllocator.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanFrame.hpp  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.hpp  VulkanHelpers.hpp  VulkanImage.cpp  VulkanImage.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanRenderTarget.cpp  VulkanRenderTarget.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanShader.cpp  VulkanShader.hpp  VulkanVertex.hpp  VulkanWindow.cpp  VulkanWindow.hpp
src/scene/: AssetHandle.hpp  AssetManager.cpp  AssetManager.hpp  Camera.cpp  Camera.hpp  Components.hpp  Entity.cpp  Entity.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ModelLoader.cpp  ModelLoader.hpp  RenderView.hpp  Scene.cpp  Scene.hpp  SceneSerializer.cpp  SceneSerializer.hpp  Texture.cpp  Texture.hpp
src/scripts/: NativeScriptsRegistry.cpp  NativeScriptsRegistry.hpp  ScriptEngine.cpp  ScriptEngine.hpp
